[project]
name = "my-first-project"
version = "0.1.0"
description = "My first Poetry project"
authors = [{name = "Sai Sudesh Reddy", email = "sudesh.arekutty@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
