[project]
name = "my-first-project"
version = "0.1.0"
description = "My first Poetry project"
authors = [{name = "Sai Sudesh Reddy", email = "sudesh.arekutty@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["fastapi (>=0.121.1,<0.122.0)", "uvicorn (>=0.38.0,<0.39.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
